BASIRA #325 - Adding the "name" attribute to Artwork, Physical Component, and Visual Context detail pages

--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -171,6 +171,7 @@
       "details": "Details",
       "document": "Document",
       "id": "ID",
+      "name": "Name",
       "physicalComponent": "Physical Component",
       "updated": "Record updated",
       "visualContext": "Visual Context"
